changes to css and Navbar for Searhbar and categories

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html, body {
+  padding: 10px;
+}
 .App {
   text-align: center;
 }
@@ -21,4 +24,18 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+ul {
+  list-style: none;
+  display: inline-block;
+}
+
+.boxdiv {
+  display: inline-block;
+  width: 450px;
+  height: 150px;
+  border: 1px solid black;
+  background-color: silver;
+  margin-left: 100px;
 }
