--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .flexcontainer{
-  justify-content: center;
+  justify-content: space-around;
   display:flex;
   flex-wrap: wrap;
   align-content: flex-start;
