--- a/src/App.css
+++ b/src/App.css
@@ -223,23 +223,23 @@ ul {
 }
 
 #ambar {
-  width: 250px;
+  width: 200px;
 }
 
 #jung {
-  width: 250px;
+  width: 200px;
 }
 
 #ruben {
-  width: 250px;
+  width: 200px;
 }
 
 #salina {
-  width: 250px;
+  width: 200px;
 }
 
-.staff {
-  padding-left: 150px;
+.work {
+  padding-right: 20px;
 }
 
 hr {
